backend/tests/golden/queries/positive/06_in_with_subquery/query.sdbl
ВЫБРАТЬ
    Наименование
ИЗ
    Справочник.Контрагенты
ГДЕ
    Ссылка В (ВЫБРАТЬ РАЗЛИЧНЫЕ Контрагент ИЗ РегистрНакопления.Продажи)
