backend/tests/golden/queries/negative/02_proper_join_with_temp_table/query.sdbl
ВЫБРАТЬ
    Контрагент,
    СУММА(Сумма) КАК Сумма
ПОМЕСТИТЬ ВТ_ИтогиПродаж
ИЗ
    РегистрНакопления.Продажи
СГРУППИРОВАТЬ ПО Контрагент
ИНДЕКСИРОВАТЬ ПО Контрагент
;
ВЫБРАТЬ
    К.Наименование,
    Т.Сумма
ИЗ
    ВТ_ИтогиПродаж КАК Т
    ВНУТРЕННЕЕ СОЕДИНЕНИЕ Справочник.Контрагенты КАК К
    ПО Т.Контрагент = К.Ссылка
